# the_family

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile.caddy  README.md  agent-guide.md  component-guide.md  cyfr.yaml  docker-compose.override.yml  docker-compose.yml  inform-proxy.js  integration-guide.md
client/: app.json  credentials.json  eas.json  global.css  metro.config.js  package-lock.json  package.json  tailwind.config.ts
client/app/: +not-found.tsx  _layout.tsx
client/app/(app)/: _layout.tsx  admin.tsx  commission.tsx  index.tsx  members.tsx  operations.tsx  settings.tsx
client/app/(auth)/: _layout.tsx  login.tsx  reset-password.tsx  signup.tsx
client/components/: AiDisclosureScreen.tsx  BackgroundWatermark.tsx  ToastOverlay.tsx
client/components/admin/: AddModelModal.tsx  (+2 more)
client/config/: constants.ts
client/contexts/: AuthContext.tsx  CommissionContext.tsx  FamilySitDownContext.tsx
client/hooks/: useAdminUsers.ts  useAvatarUpload.ts  useBackRoomSitDowns.ts  useCommission.ts  useCommissionSitDowns.ts  useInformants.ts  useMemberProgress.ts  useMembers.ts  useMention.ts  useMessages.ts  useModelCatalog.ts  useModels.ts  useOperations.ts  useRealtimeStatus.ts  useResponsive.ts  useSendMessage.ts  useSitDownData.ts  useSitDowns.ts
client/lib/: alert.ts  cyfr.ts  dev-host.ts  error-messages.ts  mention-parser.ts  notifications.ts  realtime-hub.ts  realtime.ts  supabase.ts  toast.ts  types.ts
client/providers/: RealtimeProvider.tsx
components/catalysts/local/files/0.4.0/src/: Cargo.toml
components/catalysts/local/files/0.4.0/src/src/: bindings.rs  lib.rs
components/catalysts/local/openai/0.1.0/src/: Cargo.toml
components/catalysts/local/openai/0.1.0/src/src/: lib.rs
components/catalysts/local/supabase/0.2.0/src/: Cargo.toml
components/catalysts/local/supabase/0.2.0/src/src/: functions.rs
components/formulas/local/agent/0.1.0/src/: Cargo.toml
components/formulas/local/agent/0.1.0/src/wit/: world.wit
components/formulas/local/informant-api/0.1.0/src/: Cargo.toml
components/formulas/local/informant-api/0.1.0/src/src/: lib.rs
components/reagents/local/mention-parser/0.1.0/src/: Cargo.toml
components/reagents/local/mention-parser/0.1.0/src/src/: bindings.rs  lib.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
migrations/: 002-nullable-catalog-model.sql  003-sit-down-admins.sql  004-remove-commission-contact.sql  005-sit-down-read-receipts.sql  006-enter-sit-down-rpc.sql  007-participant-update-policy.sql  008-auto-delete-empty-sit-downs.sql  009-informants.sql  010-informant-token-rpc.sql  011-sit-downs-realtime.sql  012-leave-cascade.sql  013-fix-update-policy-recursion.sql  014-member-roles.sql  015-push-notifications.sql  016-bookkeeper-storage.sql  017-avatars-bucket.sql  018-jobs-table.sql  019-user-delete-cascade.sql  020-soldier-types.sql  021-back-room.sql  022-commission-contacts-replica-identity.sql
scripts/: setup-supabase.sh
supabase/: fix_role_member.sql  kong-entrypoint.sh  kong.yml  migration.sql  migration_tiers_catalog.sql
supabase/init/: 000-roles.sh  000-roles.sql  001-migration.sql
wit/catalyst/: world.wit
wit/reagent/: world.wit
(+360 files in other folders)
