[package]
name = "files-catalyst"
version = "0.4.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.component]
package = "cyfr:catalyst"

[package.metadata.component.target]
world = "catalyst"
path = "wit"

[package.metadata.component.target.dependencies]
"cyfr:storage" = { path = "wit/deps/cyfr-storage" }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
