[package]
name = "informant-api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = "0.25"
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"

[package.metadata.component]
package = "cyfr:formula"

[package.metadata.component.target]
world = "formula"
path = "wit"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
