[package]
name = "mention-parser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = "0.25"
serde_json = "1.0"

[package.metadata.component]
package = "cyfr:reagent"

[package.metadata.component.target]
world = "reagent"
path = "wit"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
